--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,6 @@ main #swimlessons {
 }
 h4#swimlessons{
     line-height: 4.8;
-    margin-top: ;
     font-size: 28px;
 }
 h5{
@@ -65,7 +64,9 @@ ul.no-bullets{
     list-style-type: none;
     margin: 0;
     padding: 0;
+    line-height:2.0 ;
 }
+
 /* ------ Navbar ------- */
 nav {
    position: relative;
@@ -231,3 +232,106 @@ nav {
       /* flex-flow: row wrap;; */
    }
 }
+/* Footer */ 
+.splash-site-footer {
+    background: no-repeat var(--light-grey) url("/images/footer-bg.jpeg") center;
+    background-size: cover;
+    padding-bottom: 150px;
+    padding-top: 20px;
+  }
+  
+  .splash-site-footer .footer-part-one {
+    align-items: center;
+  }
+  
+  .splash-site-footer .footer-logo {
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .splash-site-footer .footer-part-one .navbar {
+    text-decoration: underline;
+    justify-content: center;
+  }
+  
+  .splash-site-footer .footer-part-one .nav-link {
+    color: black;
+    font-weight: 600;
+  }
+  
+  .splash-site-footer .icon-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .splash-site-footer .icon-wrapper a {
+    cursor: pointer;
+  }
+  
+  .splash-site-footer .footer-contact-container,
+  .splash-site-footer .foot-part-two-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+  }
+  
+  .splash-site-footer .footer-contact {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    padding: 35px 0;
+  }
+  
+  
+  .splash-site-footer .footer-part-two {
+    width: 80%;
+  }
+  
+  .splash-site-footer .footer-part-two .sponsors-logo {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .splash-site-footer .footer-part-two .sponsors-logo > div:not(:last-child) {
+    margin-right: 20px;
+  }
+  
+  .splash-site-footer .footer-part-two .copyright {
+    text-align: right;
+  }
+  
+  @media (max-width: 767px) {
+    .splash-site-footer .footer-contact {
+      flex-direction: column;
+      width: 90%;
+    }
+  
+    .splash-site-footer .footer-contact > div:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  
+    .splash-site-footer .icon-wrapper a:first-child {
+      margin: 0 !important;
+    }
+  
+    .splash-site-footer .footer-part-two .copyright {
+      text-align: center;
+      margin-top: 30px;
+    }
+  
+    .splash-site-footer .footer-part-two .sponsors-logo > div:last-child {
+      margin: auto;
+    }
+  }
+  
+  :root {
+    --blue: #03b1f4;
+    --white: #ffffff;
+    --light-grey: #e4e4e4;
+    --black: #1a2e38;
+    --dark-grey: #444444;
+    --grey: #757576;
+  }
